# research-microgrid-cpp

./: CMakeLists.txt  README.md
src/compat/: Externalizable.cpp  Externalizable.h  endian.cpp  endian.h  utf.cpp  utf.h
src/data/: BooleanMicrogridDatum.cpp  BooleanMicrogridDatum.h  FloatMicrogridDatum.cpp  FloatMicrogridDatum.h  MicrogridBooleanMeasurementType.h  MicrogridDatum.cpp  MicrogridDatum.h  MicrogridFloatMeasurementType.h  MicrogridNode.cpp  MicrogridNode.h  MicrogridNodeType.h
src/data/abs/: Datum.cpp  Datum.h  Entity.cpp  Entity.h  Node.cpp  Node.h
test/: test.cpp  test.h
